--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
 											</tr>
 										</table>
 									</div>
-									<img src="./img/icons/switchToGradient.png" alt="gradient">
+									<div class="methodLeftBlockImg">
+										<img src="./img/icons/switchToGradient.png" alt="gradient">
+									</div>
 								</div>
 							</div>
 							<div class="methodButtons">
